--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
       client:
         registration:
           kakao:
-            client-id: <my-kakao-client-id>
+            client-id: <kakao_developers-요약정보-REST_API_키>
             client-name: Kakao
-            client-secret: <my-kakao-client-secret>
+            client-secret: <kakao_developers-카카오로그인-보안-Client_Secret-코드>
             authorization-grant-type: authorization_code
             client-authentication-method: POST
             redirect-uri: "{baseUrl}/api/auth/{action}/oauth2/code/{registrationId}"
