인증 완료 후 토큰 발급 기능 추가

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ ext {
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client:${springBootVersion}"
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation "com.auth0:java-jwt:3.19.2"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
