oauth2 인증 정보 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,17 @@
-kakao-auth-server: https://kauth.kakao.com
+uri:
+  kakao:
+    auth: https://kauth.kakao.com
+    api: https://kapi.kakao.com
+
+logging:
+  level:
+    org.springframework:
+      web.client: debug
+      security: debug
+
+jwt:
+  secret: <my-secret>
+
 spring:
   security:
     oauth2:
@@ -8,15 +21,17 @@ spring:
             client-id: <kakao_developers-요약정보-REST_API_키>
             client-name: Kakao
             client-secret: <kakao_developers-카카오로그인-보안-Client_Secret-코드>
-            authorization-grant-type: authorization_code
             client-authentication-method: POST
+            authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/api/auth/{action}/oauth2/code/{registrationId}"
             scope:
               - profile_nickname
-              - profile_email
+              - account_email
               - birthday
         provider:
           kakao:
-            authorization-uri: ${kakao-auth-server}/oauth/authorize
-            token-uri: ${kakao-auth-server}/oauth/token
-            user-info-uri: ${kakao-auth-server}/v2/user/me
+           authorization-uri: ${uri.kakao.auth}/oauth/authorize
+           token-uri: ${uri.kakao.auth}/oauth/token
+           user-info-uri: ${uri.kakao.api}/v2/user/me
+           user-info-authentication-method: GET
+           user-name-attribute: id
